# arq-fwa

./: .env.example  .gitignore  ArqAI FWA Detection- Complete Updated Architecture.html  BUILD_PLAN.md  PLAN.md  README.md  docker-compose.yml  generate_sample_csv.py  plan.md
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  test_integration.py  test_pipeline.py  worker.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_workspaces_and_workspace_id.py  b3c4d5e6f7a8_add_tao_capc_oda_rag_tables.py  c4d5e6f7a8b9_add_pipeline_runs_table.py  d5e6f7a8b9c0_add_users_table.py  ffd44c2a326f_initial_schema_all_15_tables.py
backend/app/: config.py  database.py  main.py
backend/app/api/: admin_users.py  agents.py  audit.py  auth.py  cases.py  claims.py  dashboard.py  deps.py  governance.py  metrics.py  pipeline.py  providers.py  rules.py  scoring.py  workspaces.py
backend/app/auth/: __init__.py  context.py  data_classification.py  jwt.py  passwords.py  permissions.py  roles.py
backend/app/capc/: __init__.py  compiler.py  evidence.py  exception_router.py  models.py  opcodes.py  policy_graph.py  validator.py
backend/app/middleware/: logging_config.py  metrics.py  rate_limit.py  request_context.py  security_headers.py
backend/app/models/: __init__.py  audit.py  case.py  chat.py  claim.py  member.py  pipeline_run.py  provider.py  reference.py  rule.py  scoring.py  user.py  workspace.py
backend/app/oda_rag/: __init__.py  adaptive_controller.py  drift_detector.py  learner.py  models.py  (+2 more)
backend/tests/: conftest.py  test_auth.py
(+94 files in other folders)
